# knowlet

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
docs/: README.en.md  README.md
docs/decisions/: 0001-wedge-learning-first.md  0002-core-principles.en.md  0002-core-principles.md  0003-wedge-pivot-ai-memory-layer.en.md  0003-wedge-pivot-ai-memory-layer.md  0004-ai-compose-code-execute.en.md  0004-ai-compose-code-execute.md  0005-llm-integration-strategy.en.md  0005-llm-integration-strategy.md  0006-storage-and-sync.en.md  0006-storage-and-sync.md  0008-cli-parity-discipline.en.md  0008-cli-parity-discipline.md  0009-mining-tasks-and-drafts.en.md  0009-mining-tasks-and-drafts.md  0010-i18n.en.md  0010-i18n.md  0011-web-ui-redesign.en.md  0011-web-ui-redesign.md  0012-notes-first-ai-optional.en.md  0012-notes-first-ai-optional.md  0013-knowledge-management-contract.en.md  0013-knowledge-management-contract.md  0014-note-quiz-mode.en.md  0014-note-quiz-mode.md  0015-quote-references.en.md  0015-quote-references.md  0016-url-capture.en.md  0016-url-capture.md  0017-llm-web-search-tool.en.md  0017-llm-web-search-tool.md  README.en.md  README.md
docs/decisions/archive/: 0001-wedge-learning-first.en.md  0007-mvp-slice.en.md  0007-mvp-slice.md  README.md
docs/design/: README.en.md  README.md  architecture-diagrams.en.md  architecture-diagrams.md  architecture.en.md  architecture.md  m7-m8-redesign-brief.md  mvp-slice.en.md  mvp-slice.md  organization.en.md  organization.md  tech-stack.en.md  tech-stack.md  users.en.md  users.md  voice.en.md  voice.md
docs/design/bundle-2026-05-04/: README.md
docs/design/bundle-2026-05-04/chats/: chat1.md
docs/design/bundle-2026-05-04/project/: Audit.html  Knowlet.html  New.html  Tokens.html  audit-1-selection.jsx  audit-2-capsules.jsx  audit-3-url-ghost.jsx  audit-4-sediment.jsx  audit-5-tooltip.jsx  audit-6-tree.jsx  audit-7-backlinks.jsx  audit-8-quiz.jsx  icons.jsx  new-1-map.jsx  new-2-digest.jsx  new-3-dark.jsx  screen-cards.jsx  screen-drafts.jsx  screen-home-expanded.jsx  screen-home.jsx  screen-inbox.jsx  screen-palette.jsx  screen-review.jsx  styles.css  tokens.jsx
docs/design/bundle-2026-05-04/project/scraps/: sketch-2026-05-01T16-30-26-a3yxcm.napkin
docs/dogfood/: M7-M8.1-report-2026-05-04.md  M7-M8.1-report-template.md
docs/roadmap/: README.en.md  README.md
frontend/: index.html  tailwind.css  wireframe.html
knowlet/: __init__.py  __main__.py  _logging.py  config.py
knowlet/chat/: bootstrap.py  conversation_store.py  log.py  prompts.py  sediment.py  session.py
knowlet/cli/: _common.py  _doctor.py  cards.py  chat_repl.py  config.py  drafts.py  main.py  mining.py  notes.py  quiz.py  user.py  vault.py
knowlet/core/: backlinks.py  card.py  cards.py  drafts.py  embedding.py  events.py  fsrs_wrap.py  i18n.py  index.py  llm.py  note.py  quiz.py  quiz_store.py  quote_refs.py  splitter.py  structure_signals.py  url_capture.py  user_profile.py  vault.py  web_search.py
knowlet/core/mining/: extractor.py  runner.py  scheduler.py  sources.py  task.py  task_store.py
knowlet/core/tools/: __init__.py  _registry.py  approve_draft.py  create_card.py  fetch_url.py  get_card.py  get_draft.py  get_note.py  get_user_profile.py  list_drafts.py  list_due_cards.py  list_mining_tasks.py  list_recent_notes.py  reject_draft.py  review_card.py  run_mining_task.py  search_notes.py  web_search.py
knowlet/web/: server.py
knowlet/web/static/: app.css  app.js  index.html  tailwind.css  tailwind.input.css
knowlet/web/static/lib/: palette.js  sse.js
knowlet/web/static/lib/tests/: palette.test.mjs  sse.test.mjs
scripts/: build-frontend.sh  test-frontend.sh
tests/: test_backlinks.py  test_bootstrap_and_slash.py  test_cards.py  test_cli.py  test_conversation_store.py  test_doctor_integrity.py  test_i18n.py  test_index.py  test_log_and_dim.py  test_mining.py  test_note.py  test_quiz.py  test_quiz_store.py  test_quote_refs.py  test_sediment.py  test_splitter.py  test_streaming.py  test_structure_signals.py  test_temperature_filter.py  test_url_capture.py  test_user_profile.py  test_vault_snapshot.py  test_web.py  test_web_search.py  test_web_search_tool.py
tools/: build-frontend.sh
